--- a/main.html
+++ b/main.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Profile Page</title>
+  <link rel="stylesheet" href="style.css">
 
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div class="profile-container">
+    <div class="profile-header">
+      <img src="https://i.pravatar.cc/200" alt="Profile Picture" class="profile-pic">
+      <h1>Personal Profile Page</h1>
+    </div>
+
+    <div class="section">
+      <h2>Name</h2>
+      <p>Krishna Sharma</p>
+    </div>
+
+    <div class="section">
+      <h2>Email</h2>
+      <p>krishna.sharma@example.com</p>
+    </div>
+
+    <div class="section">
+      <h2>Profile</h2>
+      <p>Front-End Web Developer</p>
+    </div>
+
+    <div class="section">
+      <h2>About me</h2>
+      <p>
+        I am a passionate web developer who loves building responsive and user-friendly websites. 
+        I enjoy working with HTML, CSS, and JavaScript to create interactive designs. 
+        I’m always eager to learn new technologies and improve my coding skills.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Skills</h2>
+
+      <div class="skill">
+        <div class="skill-info">
+          <i class="fa-brands fa-html5"></i> HTML
+          <span class="badge">90%</span>
+        </div>
+        <div class="progress">
+          <div class="progress-bar html"></div>
+        </div>
+      </div>
+
+      <div class="skill">
+        <div class="skill-info">
+          <i class="fa-brands fa-css3-alt"></i> CSS
+          <span class="badge">85%</span>
+        </div>
+        <div class="progress">
+          <div class="progress-bar css"></div>
+        </div>
+      </div>
+
+      <div class="skill">
+        <div class="skill-info">
+          <i class="fa-brands fa-js"></i> JavaScript
+          <span class="badge">75%</span>
+        </div>
+        <div class="progress">
+          <div class="progress-bar js"></div>
+        </div>
+      </div>
+
+      <div class="skill">
+        <div class="skill-info">
+          <i class="fa-brands fa-react"></i> React
+          <span class="badge">70%</span>
+        </div>
+        <div class="progress">
+          <div class="progress-bar react"></div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</body>
+</html>
